--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\thoma\\AppData\\Roaming\\NetBeans\\8.2\\config\\PayaraEE6\\Properties\\pfv3-741845368.properties
+deploy.ant.properties.file=C:\\Users\\thoma\\AppData\\Roaming\\NetBeans\\8.2\\config\\PayaraEE6\\Properties\\pfv3574499399.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/dejea/Payara_Server/glassfish/domains/domain
+j2ee.server.domain=C:/Users/thoma/Payara_Server/glassfish/domains/domain1
 j2ee.server.home=C:/Users/thoma/Payara_Server/glassfish
-j2ee.server.instance=[C:\\Users\\thoma\\Payara_Server\\glassfish;C:\\Users\\thoma\\Payara_Server\\glassfish\\domains\\domaine 1]deployer:pfv3ee6wc:localhost:4848
+j2ee.server.instance=[C:\\Users\\thoma\\Payara_Server\\glassfish;C:\\Users\\thoma\\Payara_Server\\glassfish\\domains\\domain1]deployer:pfv3ee6wc:localhost:4848
 j2ee.server.middleware=C:/Users/thoma/Payara_Server
 javac.debug=true
 javadoc.preview=true
