--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\thoma\\AppData\\Roaming\\NetBeans\\8.2\\config\\PayaraEE6\\Properties\\pfv3574499399.properties
+deploy.ant.properties.file=C:\\Users\\codro\\AppData\\Roaming\\NetBeans\\11.1\\config\\PayaraEE6\\Properties\\pfv31031711061.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/thoma/Payara_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/thoma/Payara_Server/glassfish
-j2ee.server.instance=[C:\\Users\\thoma\\Payara_Server\\glassfish;C:\\Users\\thoma\\Payara_Server\\glassfish\\domains\\domain1]deployer:pfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Users/thoma/Payara_Server
+j2ee.server.domain=C:/Users/codro/Payara_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/codro/Payara_Server/glassfish
+j2ee.server.instance=[C:\\Users\\codro\\Payara_Server\\glassfish;C:\\Users\\codro\\Payara_Server\\glassfish\\domains\\domain1]deployer:pfv5ee8:localhost:4848
+j2ee.server.middleware=C:/Users/codro/Payara_Server
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
-user.properties.file=C:\\Users\\thoma\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+selected.browser=SL[/Browsers/FirefoxBrowser
+user.properties.file=C:\\Users\\codro\\AppData\\Roaming\\NetBeans\\11.1\\build.properties
