--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,7 +51,9 @@ j2ee.server.type=pfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.primefaces.classpath}:\
-    ${libs.IText_7.1.9.classpath}
+    ${libs.jsf20.classpath}:\
+    ${libs.javaee-api-7.0.classpath}:\
+    ${libs.iText_5.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
