--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\dejea\\AppData\\Roaming\\NetBeans\\8.2\\config\\PayaraEE6\\Properties\\pfv3-1988255706.properties
+deploy.ant.properties.file=C:\\Users\\thoma\\AppData\\Roaming\\NetBeans\\8.2\\config\\PayaraEE6\\Properties\\pfv3574499399.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/dejea/Payara_Server/glassfish/domains/domain
-j2ee.server.home=C:/Users/dejea/Payara_Server/glassfish
-j2ee.server.instance=[C:\\Users\\dejea\\Payara_Server\\glassfish;C:\\Users\\dejea\\Payara_Server\\glassfish\\domains\\domain]deployer:pfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Users/dejea/Payara_Server
+j2ee.server.domain=C:/Users/thoma/Payara_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/thoma/Payara_Server/glassfish
+j2ee.server.instance=[C:\\Users\\thoma\\Payara_Server\\glassfish;C:\\Users\\thoma\\Payara_Server\\glassfish\\domains\\domain1]deployer:pfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Users/thoma/Payara_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\dejea\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\thoma\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
