--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -53,7 +53,7 @@ javac.classpath=\
     ${libs.primefaces.classpath}:\
     ${libs.jsf20.classpath}:\
     ${libs.javaee-api-7.0.classpath}:\
-    ${libs.iText_5.classpath}
+    ${libs.IText_5.5.13.1.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
